--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 
 		<section class="job">
             <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+			<p>I currently do landscaping and concrete. Some of my job responsibilities include excavating,grading and finishing.</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>I like to go to the gym, run and golf</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>I know C and C++</p>
         </section>
     </div>
 </body>
