--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 		<section class="job">
             <p>Current/Recent Job</p>
-			<p>I currently do landscaping and concrete. Some of my job responsibilities include excavating,grading and finishing.</p>
+			<p>I currently do landscaping and concrete. Some of my job responsibilities include excavating, grading, and finishing.</p>
         </section>		
 
         <section class="hobbies">
