--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </section>
 
 		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>I currently do landscaping and concrete. Some of my job responsibilities include excavating, grading, and finishing.</p>
+            <h2>Current/Recent Job</h2>
+		<p>I currently do landscaping and concrete. Some of my job responsibilities include excavating, grading, and finishing.</p>
         </section>		
 
         <section class="hobbies">
