--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <h2>Fun Fact</h2>
             <p>I know C and C++</p>
         </section>
+	    <p>Last Updated 9/6/2024</p>
     </div>
 </body>
 </html>
